--- a/public/locales/en/exhibitor.json
+++ b/public/locales/en/exhibitor.json
@@ -51,7 +51,7 @@
   },
   "why-exhibit": {
     "title": "Why Exhibit?",
-    "overview": "In HEF 2021 you get the chance to meet potential clients in a one one meeting through our online booking system and business matching.",
+    "overview": "In HEF 2022 you get the chance to meet potential clients in a one one meeting through our online booking system and business matching.",
     "profit-1": "A joint forum between regulators (government), academics (experts/universities), and industries to facilitate the hospital needs that’s up to standards and financial conditions of the hospital.",
     "profit-2": "Increase exposure towards your products by demonstrating it during selected webinars and in our exhibition hall. (Products presented must meet the national or international standards",
     "profit-3": "Connect with potential buyers (up to 40 potential buyers in 3 days)",
@@ -61,7 +61,7 @@
   "packages": {
     "tag": "Packages",
     "title": "Virtual Exhibition Package List",
-    "content": "Companies interested in exhibiting may select between the following packages or select the desired features separately",
+    "content": "Companies that are interested in marketing their products at the exhibition can contact our Whatsapp at +62 858 9377 7283 (Adrian).",
     "help-text": "For more information about the price, you can contact our WhatsApp at +62 858 9377 7283 (Adrian)."
   }
 }
