--- a/public/locales/id/faq.json
+++ b/public/locales/id/faq.json
@@ -7,15 +7,15 @@
       "answer": "Forum Teknik Perumahsakitan merupakan forum virtual nasional dan internasional pertama yang diselenggarakan oleh Perkumpulan Teknik Perumahsakitan Indonesia (PTPI). Forum ini berfokus pada 6 bidang teknik rumah sakit: Bangunan Rumah Sakit, Mekanikal Rumah Sakit, Elektrikal Rumah Sakit, Lingkungan Rumah Sakit, Informatika Rumah Sakit, dan Alat Medis Rumah Sakit. Lebih dari 40 pembicara dari pemerintah, asosiasi, rumah sakit dan industri diundang. Kami juga menyediakan lebih dari 100 exhibitor lokal dan internasional. Acara ini akan bekerjasama dengan Karya Indonesia Cerdas"
     },
     "faq-2": {
-      "question": "Siapa saja yang akan berpartisipasi di Forum Teknik Perumahsakitan 2021?",
-      "answer": "Acara ini terbuka untuk umum. Namun, kami akan mengundang sekitar 8000 anggota PTPI dan 3000 rumah sakit yang akan terdiri dari orang-orang dari latar belakang kesehatan seperti staf manajemen rumah sakit, staf klinis rumah sakit, staf teknik rumah sakit, teknik biomedis, dokter, staf pemerintah dan dosen universitas."
+      "question": "Siapa saja yang akan berpartisipasi di Forum Teknik Perumahsakitan 2022?",
+      "answer": "Acara ini terbuka untuk umum. Namun, kami akan mengundang sekitar 10000 anggota PTPI dan 3000 rumah sakit yang akan terdiri dari orang-orang dari latar belakang kesehatan seperti staf manajemen rumah sakit, staf klinis rumah sakit, staf teknik rumah sakit, teknik biomedis, dokter, staf pemerintah dan dosen universitas."
     },
     "faq-3": {
       "question": "Siapa penyelenggara acara ini?",
       "answer": {
         "1": "Penyelenggara acara ini adalah Perkumpulan Teknik Perumahsakitan Indonesia (PTPI) yang bekerjasama dengan PT. Karya Indonesia Cerdas (KIC).",
         "2": "Perkumpulan Teknik Perumahsakitan Indonesia (PTPI) adalah organisasi profesi ahli teknik dan korporat yang bergerak di bidang pembangunan, pengoperasian, dan pemeliharaan rumah sakit di Indonesia. Asosiasi ini didirikan pada tanggal 23 Oktober 2019 di Jakarta, dan disahkan oleh Kementerian Hukum dan Hak Asasi Manusia dengan nomor AHU-0011147.AH.01.07. Visi organisasi ini adalah menjadi organisasi terdepan yang mendorong terwujudnya rumah sakit di Indonesia yang Selamat, berManfaat, Aman, Ramah Lingkungan, Terjangkau (SMART).",
-        "3": "PT. Karya Indonesia Cerdas merupakan perusahaan mitra PTPI sejak tahun 2019 dan telah bekerja sama dengan PTPI dalam menyelenggarakan beberapa seminar dan lokakarya selama setahun terakhir dengan total sekitar 9000 peserta mulai dari staf medis, teknik dan manajemen rumah sakit."
+        "3": "PT. Karya Indonesia Cerdas merupakan perusahaan mitra PTPI sejak tahun 2019 dan telah bekerja sama dengan PTPI dalam menyelenggarakan beberapa seminar dan lokakarya selama setahun terakhir dengan total sekitar 10000 peserta mulai dari staf medis, teknik dan manajemen rumah sakit."
       }
     },
     "faq-4": {
@@ -31,9 +31,9 @@
     "tag": "FAQ",
     "title": "Visitor",
     "faq-1": {
-      "question": "Saya ingin menghadiri FTP 2021. Bagaimana cara untuk mendaftar?",
+      "question": "Saya ingin menghadiri FTP 2022. Bagaimana cara untuk mendaftar?",
       "answer": {
-        "1": "ika anda tertarik untuk mengikuti FTP 2021, silahkan isi data diri anda pada formulir pendaftaran disini: ",
+        "1": "Jika anda tertarik untuk mengikuti FTP 2022, silahkan isi data diri anda pada formulir pendaftaran disini: ",
         "2": "Untuk informasi lebih lanjut, Anda dapat menghubungi kami di +62 858 9377 7283 (Adrian)."
       }
     },
@@ -44,15 +44,15 @@
     "faq-3": {
       "question": "Apa saja yang dapat saya lakukan dalam event ini?",
       "answer": {
-        "1": "Di FTP 2021, Anda dapat melakukan:",
+        "1": "Di FTP 2022, Anda dapat melakukan:",
         "2": "Menonton seminar dan berpartisipasi dalam sesi tanya jawab langsung dengan para pembicara",
         "3": "Melihat berbagai macam produk dari berbagai perusahaan 6 pameran bidang teknik rumah sakit dan membangun relasi Anda dengan perwakilan perusahaan",
         "4": "Berkonsultasi dengan konsultan atau perusahaan secara gratis"
       }
     },
     "faq-4": {
-      "question": "Keuntungan apa yang saya dapatkan ketika menghadiri FTP 2021?",
-      "answer": "Untuk melihat manfaat menghadiri FTP 2021, silakan kunjungi Mengapa Hadir? halaman di bawah Menu visitor atau klik tautan di bawah ini"
+      "question": "Keuntungan apa yang saya dapatkan ketika menghadiri FTP 2022?",
+      "answer": "Untuk melihat manfaat menghadiri FTP 2022, silakan kunjungi Mengapa Hadir? halaman di bawah Menu visitor atau klik tautan di bawah ini"
     },
     "faq-5": {
       "question": "Dapatkah saya berbicara langsung di dalam stand pameran?",
@@ -61,6 +61,34 @@
     "faq-6": {
       "question": "Bagaimana cara mengajukan pertanyaan tentang produk yang saya lihat?",
       "answer": "Jika Anda tertarik dengan produk perusahaan, Anda dapat memesan sesi pertemuan 1 on 1 untuk menanyakan tentang produk dan bernegosiasi dengan perwakilan perusahaan."
+    }
+  },
+  "exhibitor": {
+    "tag": "FAQ",
+    "title": "Exhibitor",
+    "faq-1": {
+      "question": "Saya tertarik untuk mensponsori acara ini, siapa yang harus saya hubungi?",
+      "answer": "Jika Anda tertarik untuk mensponsori acara ini dan ingin menghubungi penanggung jawab, silakan hubungi email kami di hospital.engineering.expo@gmail.com atau whatsapp kami di +62 858 9377 7283 (Adrian). Kami akan menghubungi Anda sesegera mungkin."
+    },
+    "faq-2": {
+      "question": "Apa keuntungan menjadi sponsor HEF 2022?",
+      "answer": "Untuk melihat daftar manfaat yang bisa Anda dapatkan sebagai sponsor acara kami, silakan lihat halaman Paket di bawah menu Exhibitor atau klik link di bawah ini"
+    },
+    "faq-3": {
+      "question": "Bagaimana cara mendaftarkan perusahaan saya sebagai salah satu peserta pameran?",
+      "answer": "Jika Anda ingin mendaftar sebagai peserta pameran, silakan buka halaman Daftar sebagai Peserta Pameran di bawah menu pendaftaran atau klik tautan di bawah ini"
+    },
+    "faq-4": {
+      "question": "Apakah ada daftar harga untuk stand pameran?",
+      "answer": "Jika Anda tertarik untuk membuka stand pameran dan ingin mengetahui daftar harga, Anda dapat menghubungi email kami di hospital.engineering.expo@gmail.com atau whatsapp kami di +62 858 9377 7283 (Adrian) atau kunjungi kontak halaman kami. Kami akan menghubungi Anda sesegera mungkin."
+    },
+    "faq-5": {
+      "question": "Berapa lama stand saya tetap hidup?",
+      "answer": "Stand pameran tetap aktif selama 24-7 sepanjang tahun sejak peluncurannya, namun obrolan langsung dan sesi pertemuan 1 lawan 1 hanya diadakan selama tiga hari pada tanggal 21 Mei, 28 Mei dan 4 Juni 2022."
+    },
+    "faq-6": {
+      "question": "Apa manfaat menjadi exhibitor di HEF 2022?",
+      "answer": "Untuk melihat daftar manfaat yang bisa Anda dapatkan sebagai peserta pameran, silakan kunjungi Why Exhibit? halaman dan halaman Paket di bawah menu Peserta Pameran"
     }
   }
 }
