--- a/public/locales/id/home.json
+++ b/public/locales/id/home.json
@@ -7,7 +7,7 @@
     "seconds": "Detik",
     "event-tag": "Virtual",
     "event-title": "Forum Teknik Perumahsakitan",
-    "event-date": "2 Oktober, 16 Oktober, dan 6 November 2021"
+    "event-date": "21 Mei, 28 Mei, dan 4 Juni 2022"
   },
   "blog": {
     "header": "Blog & Berita",
