--- a/public/locales/id/visitor.json
+++ b/public/locales/id/visitor.json
@@ -22,7 +22,7 @@
   },
   "who-attend": {
     "title": "Siapa yang Hadir?",
-    "overview": "Dengan lebih dari 8000 anggota terdaftar dari Indonesia, PTPI diakui secara nasional dalam penyelenggaraan webinar yang berfokus pada teknik perumahsakitan. Profil visitor kami terdiri dari berbagai macam tenaga ahli dari berbagai sektor industri kesehatan, sebagai berikut:",
+    "overview": "Dengan lebih dari 10000 anggota terdaftar dari Indonesia, PTPI diakui secara nasional dalam penyelenggaraan webinar yang berfokus pada teknik perumahsakitan. Profil visitor kami terdiri dari berbagai macam tenaga ahli dari berbagai sektor industri kesehatan, sebagai berikut:",
     "attendee-1": "Tim Manajemen Rumah Sakit",
     "attendee-2": "Staf Teknik Rumah Sakit",
     "attendee-3": "Dokter",
@@ -33,12 +33,12 @@
   },
   "why-attend": {
     "title": "Mengapa Hadir?",
-    "overview": "Visitor FTP 2021 dapat bergabung dalam acara online selama 3 hari secara gratis, mulai dari serangkaian webinar hingga peluang networking dengan exhibitor kami.",
+    "overview": "Visitor FTP 2022 dapat bergabung dalam acara online selama 3 hari secara gratis, mulai dari serangkaian webinar hingga peluang networking dengan exhibitor kami.",
     "profit-1": "Serangkaian seminar dengan lebih dari 40 pembicara dari sektor pemerintah, asosiasi, industri dan rumah sakit dengan sesi tanya jawab langsung di setiap seminar untuk memfasilitasi kebutuhan rumah sakit yang sesuai standar dan terjangkau.",
     "profit-2": "Presentasi produk dari exhibitor dan business matching 1 on 1 antara exhibitor dan calon pembeli.",
     "profit-3": "Gratis konsultasi 1 on 1 dengan pembicara atau konsultan yang membidangi dalam 6 bidang teknik perumahsakitan.",
-    "profit-4": "Networking dengan lebih dari 8000 anggota PTPI",
-    "profit-5": "Dapatkan materi eksklusif mengenai topik Teknik Perumahsakitan di era COVID19 dan Industri 4.0",
+    "profit-4": "Networking dengan lebih dari 10000 anggota PTPI.",
+    "profit-5": "Dapatkan materi eksklusif mengenai topik System Pengendalian Penyebaran COVID-19 dan Infeksi Lainnya di Rumah Sakit.",
     "profit-6": "Sertifikat bernilai 24 poin dan kesempatan memenangkan hadiah-hadiah menarik selama acara berlangsung."
   }
 }
