--- a/public/locales/en/faq.json
+++ b/public/locales/en/faq.json
@@ -7,15 +7,15 @@
       "answer": "The Hospital Engineering Forum will be the first virtual national forum and international fair by the Indonesian Association of Hospital Engineering (IAHE). This forum focuses on 6 hospital engineering areas: Hospital Building, Hospital Mechanic, Hospital Electric, Hospital Environment, Hospital Informatics, and Hospital Devices. More than 40 speakers from government, association, hospital and industries are invited. We also provide around 100 local and international exhibitors. This event will be co-organised with Karya Indonesia Cerdas"
     },
     "faq-2": {
-      "question": "Who is participating at the Hospital Engineering Forum 2021?",
-      "answer": "The event is open to the public. However, we will invite around 8000 members of IAHE and 3000 hospitals which will consist of people from the healthcare settings such as hospital management staff, hospital clinical staff, hospital engineering staff, biomedical engineer, medical doctor, government staff and university lecturers."
+      "question": "Who is participating at the Hospital Engineering Forum 2022?",
+      "answer": "The event is open to the public. However, we will invite around 10000 members of IAHE and 3000 hospitals which will consist of people from the healthcare settings such as hospital management staff, hospital clinical staff, hospital engineering staff, biomedical engineer, medical doctor, government staff and university lecturers."
     },
     "faq-3": {
       "question": "Who is the organizer of this event?",
       "answer": {
         "1": "The organizer of this event is the Indonesian Association of Hospital Engineering (IAHE) in partnership with PT. Karya Indonesia Cerdas (KIC).",
         "2": "The Indonesian Association of Hospital Engineering (IAHE) is a professional organization of technical experts and corporations engaged in the construction, operation, and maintenance of hospitals in Indonesia. The association was established on October 3, 2019 in Jakarta, and was ratified by the Ministry of Law and Human Rights with the number AHU-0011147.AH.01.07. The organization vision is to become the leading organization that encourages the realization of hospitals in Indonesia that are Safe, environMentally friendly, Affordable, secuRe, and worThwhile (SMART).",
-        "3": "PT. Karya Indonesia Cerdas is a partner company of IAHE since 2019 and has been collaborating with IAHE in organizing several seminars and workshops over the past year with a total of around 9000 participants ranging from medical, engineering and management staff of the hospitals."
+        "3": "PT. Karya Indonesia Cerdas is a partner company of IAHE since 2019 and has been collaborating with IAHE in organizing several seminars and workshops over the past year with a total of around 10000 participants ranging from medical, engineering and management staff of the hospitals."
       }
     },
     "faq-4": {
@@ -31,28 +31,28 @@
     "tag": "FAQ",
     "title": "Visitor",
     "faq-1": {
-      "question": "I want to attend HEF 2021. How can I register?",
+      "question": "I want to attend HEF 2022. How can I register?",
       "answer": {
-        "1": "If you are interested in attending HEF 2021, please fill your details in the registration form here,'Register as Visitor' ",
+        "1": "If you are interested in attending HEF 2022, please fill your details in the registration form here,'Register as Visitor' ",
         "2": "For further information, you can contact us in +62 858 9377 7283 (Adrian)."
       }
     },
     "faq-2": {
-      "question": "Is there a participation fee for HEF 2021?",
+      "question": "Is there a participation fee for HEF 2022?",
       "answer": "No, it’s completely free of charge to participate as visitors in our event! You can share this good news to your colleagues that might be interested in joining this event as well!"
     },
     "faq-3": {
       "question": "What can I expect from this event?",
       "answer": {
-        "1": "In HEF 2021, you’ll be able to:",
+        "1": "In HEF 2022, you’ll be able to:",
         "2": "Watch seminars and participate in live Q&A sessions with the speakers",
         "3": "View a wide range of products from 6 hospital engineering areas exhibitors and engage with company representatives",
         "4": "Consult with consultants or companies for free"
       }
     },
     "faq-4": {
-      "question": "What’s the benefit of attending HEF 2021?",
-      "answer": "To see the benefits of attending HEF 2021, please visit the Why Attend? page under Visitor Menu or click the link below"
+      "question": "What’s the benefit of attending HEF 2022?",
+      "answer": "To see the benefits of attending HEF 2022, please visit the Why Attend? page under Visitor Menu or click the link below"
     },
     "faq-5": {
       "question": "Can I talk to people on the stand?",
@@ -71,7 +71,7 @@
       "answer": "If you’re interested in sponsoring this event and would like to contact the person in charge, please contact our email at hospital.engineering.expo@gmail.com or whatsApp us in +62 858 9377 7283 (Adrian). We will get back to you as soon as possible."
     },
     "faq-2": {
-      "question": "What’s the benefit of becoming HEF 2021 sponsors?",
+      "question": "What’s the benefit of becoming HEF 2022 sponsors?",
       "answer": "To see the list of benefits you can get as a sponsor of our event, please view the Packages page under the Exhibitor menu or click the link below"
     },
     "faq-3": {
@@ -84,10 +84,10 @@
     },
     "faq-5": {
       "question": "How long does my stand stay live?",
-      "answer": "Exhibition stands remain live for 24-7 the entire year from their launch, however live chats and 1 on 1 meeting sessions are only held for three days on the 2nd, 16th and 30th October 2021."
+      "answer": "Exhibition stands remain live for 24-7 the entire year from their launch, however live chats and 1 on 1 meeting sessions are only held for three days on the 21 May, 28 May and 30 Juny 2022."
     },
     "faq-6": {
-      "question": "What’s the benefit of exhibiting at HEF 2021?",
+      "question": "What’s the benefit of exhibiting at HEF 2022?",
       "answer": "To see the list of benefits you can get as an exhibitor, please visit Why Exhibit? page and Packages page under the Exhibitor menu"
     }
   }
