--- a/public/locales/en/visitor.json
+++ b/public/locales/en/visitor.json
@@ -22,22 +22,22 @@
   },
   "who-attend": {
     "title": "Who Attend?",
-    "overview": "With over 8000 registered members from Indonesia, IAHE is recognised nationally for conducting webinars focusing on hospital engineering. Healthcare professionals across the following industry sectors are represented within our visitor profiles:",
-    "attandee-1": "Hospital Management Team",
-    "attandee-2": "Hospital Engineering Staff",
-    "attandee-3": "Medical Doctor",
-    "attandee-4": "University Lecturer",
-    "attandee-5": "Hospital Clinical Staff",
-    "attandee-6": "Biomedical Engineer",
-    "attandee-7": "Government Staff"
+    "overview": "With over 10000 registered members from Indonesia, IAHE is recognised nationally for conducting webinars focusing on hospital engineering. Healthcare professionals across the following industry sectors are represented within our visitor profiles:",
+    "attendee-1": "Hospital Management Team",
+    "attendee-2": "Hospital Engineering Staff",
+    "attendee-3": "Medical Doctor",
+    "attendee-4": "University Lecturer",
+    "attendee-5": "Hospital Clinical Staff",
+    "attendee-6": "Biomedical Engineer",
+    "attendee-7": "Government Staff"
   },
   "why-attend": {
     "title": "Why Attend?",
-    "overview": "Visitors of HEF 2021 can look forward to joining a free of charge 3 days online event, ranging from a series of webinars to networking opportunities with our exhibitors.",
+    "overview": "Visitors of HEF 2022 can look forward to joining a free of charge 3 days online event, ranging from a series of webinars to networking opportunities with our exhibitors.",
     "profit-1": "A series of seminars with over 40 speakers from the government, association, industry and hospital sectors with a live Q&A session in each seminar to facilitate the hospital needs that’s up to standards and affordable.",
     "profit-2": "Product presentation from exhibitors and 1 on 1 business matching between exhibitors and prospective buyers.",
     "profit-3": "Free 1 on 1 consultation with speakers or consultants specializing in the 6 hospital engineering areas.",
-    "profit-4": "Networking with over 8000 members of IHEA",
+    "profit-4": "Networking with over 10000 members of IHEA",
     "profit-5": "Get exclusive materials on the topic of Hospital Engineering in the era of COVID19 and Industry 4.0",
     "profit-6": "Certificate worth 24 points And win attractive prizes and rewards throughout the event."
   }
