--- a/public/locales/en/overview.json
+++ b/public/locales/en/overview.json
@@ -31,12 +31,12 @@
     "program-2": {
       "title": "Virtual Exhibition",
       "tag": "National & International Hospital Engineering Products Exhibition",
-      "content": "Exhibition of products from around 100 local and international  companies in 6 areas of hospital engineering and products related to COVID-19. Opportunity to meet potential buyers in 1 on 1 business matching and product exposure to 7900 IAHE members."
+      "content": "Exhibition of products from around 100 local and international  companies in 6 areas of hospital engineering and products related to COVID-19. Opportunity to meet potential buyers in 1 on 1 business matching and product exposure to 10000 IAHE members."
     },
     "program-3": {
       "title": "Product Simulation",
-      "tag": "produck simulation",
-      "content": ""
+      "tag": "Product simulation from several local and international companies",
+      "content": "Product simulation from several local and international companies. Product simulation activities consist of product demos, simulations, the acquisition process, use and maintenance as well as consultations regarding the products being demonstrated."
     }
   },
   "webinar-rundown": "Webinar Rundown",
