--- a/public/locales/id/overview.json
+++ b/public/locales/id/overview.json
@@ -30,13 +30,13 @@
     },
     "program-2": {
       "title": "Pameran Virtual",
-      "tag": "Pameran Produk Teknik Perumahsakitan Nasional & Internasiona",
-      "content": "Pameran produk dari sekitar 100 perusahaan lokal dan internasional di 6 bidang teknik perumahsakitan dan produk terkait COVID-19. Kesempatan untuk bertemu calon pembeli dalam business matching 1 lawan 1 dan eksposur produk kepada 7900 anggota PTPI."
+      "tag": "Pameran Produk Teknik Perumahsakitan Nasional & Internasional",
+      "content": "Pameran produk dari sekitar 100 perusahaan lokal dan internasional di 6 bidang teknik perumahsakitan dan produk terkait COVID-19. Kesempatan untuk bertemu calon pembeli dalam business matching 1 lawan 1 dan eksposur produk kepada 10000 anggota PTPI."
     },
     "program-3": {
       "title": "Simulasi Produk",
-      "tag": "Simulasi produk",
-      "content": "Kesempatan untuk bertemu dengan pembicara dan peserta pameran dalam sistem Link & Match untuk membahas kolaborasi dan solusi terkait 6 bidang teknik perumahsakitan."
+      "tag": "Simulasi Produk dari beberapa perusahaan lokan dan international.",
+      "content": " Simulasi Produk dari beberapa perusahaan lokan dan international. Kegiatan simulasi produk terdiri dari produk demo, simulasi, proses akuisisi, pengunaan dan pemeliharaan serta terdapat konsultasi terkait produk yang didemokan."
     }
   },
   "webinar-rundown": "Rundown Webinar",
