--- a/public/locales/en/overview.json
+++ b/public/locales/en/overview.json
@@ -1,8 +1,8 @@
 {
   "about-hef": {
     "tag": "About",
-    "title": "Hopsital Engineering Forum 2022",
-    "content": "Hospital Engineering Forum is the first virtual national seminar and international fair by Indonesian Association of Hospital Engineering (IAHE) which will be held on 21 May, 28 May, and 4 Juny 2022. This year, 8 topics were discussed in hospital engineering: SPA for Fire Management and Hospital Evacuation, SPA for Hospital Energy Supply and Distribution, SPA for Supporting Smart Hospitals and Inpatients, SPA for Infection Control, Room and Air Conditioning, SPA for Radiology and Radiotherapy, SPA in ICU OK and CL, SPA Medical Rehabilitation, SPA Waste Treatment (liquid and solid) and Hospital Water. More than 40 speakers from the government, association, hospital and industry sectors are invited. We also provide stands for around 100 local and international exhibitors. This event will be co-organised with Karya Indonesia Cerdas."
+    "title": "Hospital Engineering Forum 2022",
+    "content": "Hospital Engineering Forum is the first virtual national seminar and international fair by Indonesian Association of Hospital Engineering (IAHE) which will be held on 21 May, 28 May, and 4 Juny 2022. This year, 8 topics will be discussed in hospital engineering: SPA for Fire Management and Hospital Evacuation, SPA for Hospital Energy Supply and Distribution, SPA for Supporting Smart Hospitals and Inpatients, SPA for Infection Control, Room and Air Conditioning, SPA for Radiology and Radiotherapy, SPA in ICU, OK and CL, SPA Medical Rehabilitation, SPA Waste Treatment (liquid and solid) and Hospital Water. More than 40 speakers from the government, association, hospital and industry sectors are invited. We also provide stands for around 100 local and international exhibitors. This event will be co-organised with Karya Indonesia Cerdas."
   },
   "about-ihea": {
     "tag": "About",
