--- a/public/locales/id/overview.json
+++ b/public/locales/id/overview.json
@@ -2,7 +2,7 @@
   "about-hef": {
     "tag": "Tentang",
     "title": "Forum Teknik Perumahsakitan 2022",
-    "content": "Forum Teknik Perumahsakitan merupakan forum nasional dan pameran internasional virtual pertama yang diselenggarakan oleh Perkumpulan Teknik Perumahsakitan Indonesia (PTPI). Pada tahun ini mengangkat 8 topik pembahasan bidang teknik rumah sakit: SPA Penanggulangan Kebakaran dan Evakuasi Rumah Sakit, SPA Penyediaan dan Distribusi Energi Rumah Sakit, SPA Pendukung Smart Hospital dan Rawat Inap, SPA Pengendali Infeksi, Ruang dan Tata Udara, SPA Radiologi dan  Radioterapi, SPA di ICU OK dan CL, SPA Rehabilitasi Medis, SPA Pengolahan Limbah(cair dan padat) dan Air Rumah Sakit. Lebih dari 40 pembicara dari pemerintah, asosiasi, rumah sakit dan industri diundang. Kami juga menyediakan lebih dari 100 exhibitor lokal dan internasional. Acara ini akan bekerjasama dengan Karya Indonesia Cerdas."
+    "content": "Forum Teknik Perumahsakitan merupakan forum nasional dan pameran internasional virtual pertama yang diselenggarakan oleh Perkumpulan Teknik Perumahsakitan Indonesia (PTPI). Pada tahun ini mengangkat 8 topik pembahasan bidang teknik rumah sakit: SPA Penanggulangan Kebakaran dan Evakuasi Rumah Sakit, SPA Penyediaan dan Distribusi Energi Rumah Sakit, SPA Pendukung Smart Hospital dan Rawat Inap, SPA Pengendali Infeksi, Ruang dan Tata Udara, SPA Radiologi dan  Radioterapi, SPA di ICU, OK dan CL, SPA Rehabilitasi Medis, SPA Pengolahan Limbah(cair dan padat) dan Air Rumah Sakit. Lebih dari 40 pembicara dari pemerintah, asosiasi, rumah sakit dan industri diundang. Kami juga menyediakan lebih dari 100 exhibitor lokal dan internasional. Acara ini akan bekerjasama dengan Karya Indonesia Cerdas."
   },
   "about-ihea": {
     "tag": "Tentang",
